<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_share">Post share</string>
    <string name="description_post_viewer">Post viewer</string>

    <string name="post_count_likes" translatable="false"></string>
    <string name="post_count_share" translatable="false"></string>
    <string name="post_count_viewer" translatable="false">200</string>
    <string name="remove_post_action">Remove</string>
    <string name="edit_post_action">Edit</string>
    <string name="post_content_hint">Post content</string>
    <string name="editContentMessage">Edit post</string>
    <string name="description_post_like">Like</string>


</resources>